--- a/app/views/donations/new.html.haml
+++ b/app/views/donations/new.html.haml
@@ -1,11 +1,8 @@
-- content_for :head do
-  %script{:type => "text/javascript", :src => "https://checkout.stripe.com/checkout.js"}
-
+- content_for :page_footer do
   :javascript
     var stripePublishableKey = "#{Rails.configuration.stripe[:publishable_key]}"
-
-
   = javascript_include_tag 'donations'
+  %script{ :src => 'https://checkout.stripe.com/checkout.js', :type => 'text/javascript', 'data-cfasync' => 'false' }
 
 .stripe.reverse
   .row
@@ -19,9 +16,9 @@
       %p.lead By donating to codebar you are helping to promote diversity in the tech industry so that more women, LGBTQA and other underrepresented folks will be able to get started with programming and raise their skills to the next level.
     .medium-6.columns
       = simple_form_for :donation, url: donations_path, method: :post do |f|
-        = f.input :name, placeholder: "Name", required: false, html: {id: "name"}
-        = f.input :amount, placeholder: "25.00", required: true, id: "amount"
-        = f.submit :Donate, class: 'button', id: "donate"
+        = f.input :name, placeholder: 'Name', required: false, html: { id: 'name' }
+        = f.input :amount, placeholder: '25.00', required: true, id: 'amount'
+        = f.submit :Donate, class: 'button', id: 'donate'
         .message
 
 .stripe.reverse.text-center
@@ -30,27 +27,26 @@
     %h3 A big thank you to some of our sponsors
   .row.sponsor-row
     .medium-2.small-4.columns
-      = image_tag("sponsors/8th-Light.png", class: "small-image", alt: "8th Light")
+      = image_tag('sponsors/8th-Light.png', class: 'small-image', alt: '8th Light')
     .medium-2.small-4.columns
-      =image_tag("sponsors/bloomberg.png", alt: "Bloomberg")
+      =image_tag('sponsors/bloomberg.png', alt: 'Bloomberg')
     .medium-2.small-4.columns
-      =image_tag("sponsors/ustwo.png", alt: "ustwo")
+      =image_tag('sponsors/ustwo.png', alt: 'ustwo')
     .medium-2.small-4.columns
-      =image_tag("sponsors/gds-logo.png", alt: "GDS")
+      =image_tag('sponsors/gds-logo.png', alt: 'GDS')
     .medium-2.small-4.columns
-      =image_tag("sponsors/google.png", alt: "Google")
+      =image_tag('sponsors/google.png', alt: 'Google')
     .medium-2.small-4.columns
-      =image_tag("sponsors/mozilla.png", alt: "Mozilla")
-  .row.sponsor-row
+      =image_tag('sponsors/mozilla.png', alt: 'Mozilla')
     .medium-2.small-4.columns
-      =image_tag("sponsors/pivotal.png", alt: "Pivotal Labs")
+      =image_tag('sponsors/pivotal.png', alt: 'Pivotal Labs')
     .medium-2.small-4.columns
-      =image_tag("sponsors/shutl_logo.png", alt: "Shutl")
+      =image_tag('sponsors/shutl_logo.png', alt: 'Shutl')
     .medium-2.small-4.columns
-      =image_tag("sponsors/softwire.png", alt: "Softwire")
+      =image_tag('sponsors/softwire.png', alt: 'Softwire')
     .medium-2.small-4.columns
-      =image_tag("sponsors/StreetTeam.png", alt: "StreetTeam")
+      =image_tag('sponsors/StreetTeam.png', alt: 'StreetTeam')
     .medium-2.small-4.columns
-      =image_tag("sponsors/the-guardian.png", alt: "The Guardian")
+      =image_tag('sponsors/the-guardian.png', alt: 'The Guardian')
     .medium-2.small-4.columns
-      =image_tag("sponsors/ticketmaster.png", alt: "Ticketmaster")
+      =image_tag('sponsors/ticketmaster.png', alt: 'Ticketmaster')
