--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -1,50 +1,33 @@
-#container
-  .stripe.reverse
+.stripe.reverse
+  .row
+    .large-12.columns
+      %h2
+        Workshop at #{@workshop.host.name}
+        %br
+        %small #{humanize_date(@workshop.date_and_time, with_time: true)} #{@workshop.distance_of_time}
+      - if @workshop.date_and_time.past?
+        %label.label.warning This event has already taken place.
+  %section#banner
     .row
-      .large-12.columns
-        %h2
-          Workshop at #{@workshop.host.name}
-          %br
-          %small #{humanize_date(@workshop.date_and_time, with_time: true)} #{@workshop.distance_of_time}
-        - if @workshop.date_and_time.past?
-          %label.label.warning This event has already taken place.
-    %section#banner
-      .container
-        .row
-          .medium-12.columns
-            %p.lead
-              Attend our workshops to learn programming in a safe and supportive environment at your own pace, or to share your knowledge and coach our students.
+      .medium-12.columns
+        %p.lead
+          Attend our workshops to learn programming in a safe and supportive environment at your own pace, or to share your knowledge and coach our students.
 
-            - unless current_user and current_user.banned?
-              .medium-12.columns
-                = render 'workshop_actions'
+        - unless current_user and current_user.banned?
+          = render 'workshop_actions'
 
-  .stripe.reverse
-    .row
-      .medium-8.columns
-        %h3 Venue
-        %p
-          %strong= @workshop.host.name
-          %br
-            = @host_address.to_html
-          %br
-        - if @workshop.host.accessibility_info
-          %p
-            %strong Accessibility information:
-            = @workshop.host.accessibility_info
-        %iframe{ width: '100%', height: '350', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-        = link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-      .large-4.columns
-        %h3 Sponsors
-        %ul.no-bullet
-          - @workshop.sponsors.each do |sponsor|
-            %li
-              .row
-                .large-5.columns
-                  .sponsor-image
-                    =link_to sponsor.website do
-                      =image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
-            %br
+.stripe.reverse
+  .row
+    = render partial: 'shared/venue', locals: { venue: @workshop.host, address: @host_address}
 
-  .stripe.reverse
-    = render partial: 'members/organisers_grid', locals: { members: @workshop.organisers, show_info: false }
+    .small-12.column
+      %h3 Sponsors
+      %ul.row.no-bullet
+        - @workshop.sponsors.each do |sponsor|
+          %li.small-4.columns
+            = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
+            %p
+              = link_to sponsor.name, sponsor.website
+
+.stripe.reverse
+  = render partial: 'members/organisers_grid', locals: { members: @workshop.organisers, show_info: false }
