--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -9,35 +9,21 @@
   .row
     .large-10.columns
       = render partial: 'event_actions'
-      %br
-      %br
 
-%br
-%br
 .stripe.reverse
   .row
-    .large-7.columns
+    = render partial: 'shared/venue', locals: { venue: @event.venue, address: @host_address}
+
+  .row
+    .small-12.column
       - if @event.announce_only
         %a{ name: "information" }
-        %h4{ "data-magellan-destination" => "information"} Information
+        %h3{ "data-magellan-destination" => "information"} Information
       - else
         %a{ name: "schedule" }
-        %h4{ "data-magellan-destination" => "schedule"}
+        %h3{ "data-magellan-destination" => "schedule"}
           = t('events.schedule')
       = dot_markdown(@event.schedule)
-    .large-5.columns
-      %h4= t('events.location')
-      .row
-        .medium-8.columns
-          %p
-            = @host_address.to_html
-        .medium-4.columns
-          = image_tag(@event.venue.avatar, class: 'sponsor-logo-image', alt: @event.venue.name)
-      .row
-        .large-12.columns
-          %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-          =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-        .medium-6.columns
 
 - if @event.show_faq?
   .stripe.reverse
@@ -73,6 +59,7 @@
                   =link_to sponsor.name, sponsor.website
                   %p
                     = sponsor.description
+
 - if @event.verified_coaches.any?
   .stripe.reverse
     .row
