--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -7,7 +7,7 @@
         %small=humanize_date(@meeting.date_and_time, with_time: true)
 
   .row
-    .medium-4.columns#host
+    .medium-4.columns
       = render partial: 'meeting_actions'
 
     .medium-8.columns
