Adds directions to venue section of monthlies invitation, attendance confirmation (attending), attendance_reminder, and approve_from_waitlist emails

--- a/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
+++ b/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
@@ -15,28 +15,26 @@
                 %h3 Hi, #{@member.name}
                 %p.lead
                   A spot opened up for the next codebar Monthly!
-                %h4
-                  Agenda
-                %p
-                  = @meeting.description.html_safe
-                %h4
-                  Can't make it anymore?
-                %p
-                  = "Please #{link_to 'cancel your attendance', @cancellation_url} by following the instructions on the event page.".html_safe
 
         .content
-          %table{ bgcolor: "#FFFFFF" }
+          %table
             %tr
-              %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@meeting.venue.avatar, alt: @meeting.venue.name)
               %td
-                %h4
-                  Workshop
-                  %small #{humanize_date(@meeting.date_and_time, with_time: true)}
+                %h4 Details
+            %tr
+              %td.small{ width: "30%", style: "vertical-align: top; padding-right: 10px;" }
+                = image_tag(@meeting.venue.avatar, alt: @meeting.venue.name)
+              %td.small{ style: "vertical-align: top;" }
+                %p #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
                   %br
                   #{@host_address.to_html}
+                - if @host_address.directions
+                  %p
+                    %strong Directions:
+                    %br
+                    #{@host_address.directions}
 
         .content
           %table
