--- a/app/views/meeting_invitation_mailer/invite.html.haml
+++ b/app/views/meeting_invitation_mailer/invite.html.haml
@@ -1,7 +1,7 @@
-=render partial: 'shared_mailers/header', locals: { title: 'codebar Monthly Invitation' }
+= render partial: 'shared_mailers/header', locals: { title: 'codebar Monthly Invitation' }
 %body{ bgcolor: '#FFFFFF' }
 
-  =render partial: 'shared_mailers/body_header', locals: { title: 'Monthly Talks Night Invitation' }
+  = render partial: 'shared_mailers/body_header', locals: { title: 'codebar Monthly Invitation' }
 
   %table{ class: 'body-wrap'}
     %tr
@@ -17,31 +17,33 @@
                   We're back for another installment of codebar Monthlies on #{humanize_date(@meeting.date_and_time)} at #{@meeting.venue.name}!
                 %p
                   = "#{link_to 'You can RSVP here', @rsvp_url}, after logging into your codebar account.".html_safe
-                %h4
-                  Agenda
-                %p
-                  = @meeting.description.html_safe
 
         .content
-          %table{ bgcolor: "#FFFFFF" }
+          %table
             %tr
-              %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@meeting.venue.avatar, alt: @meeting.venue.name)
               %td
-                %h4
-                  Details
-                %small #{humanize_date(@meeting.date_and_time, with_time: true)}
+                %h4 Details
+            %tr
+              %td.small{ width: "30%", style: "vertical-align: top; padding-right: 10px;" }
+                = image_tag(@meeting.venue.avatar, alt: @meeting.venue.name)
+              %td.small{ style: "vertical-align: top;" }
+                %p #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
                   %br
                   #{@host_address.to_html}
+                - if @host_address.directions
+                  %p
+                    %strong Directions:
+                    %br
+                    #{@host_address.directions}
 
         .content
           %table
             %tr
               %td
                 %p
-                  If you have any trouble finding the venue, give us a call
+                  If you have any trouble finding the venue, give us a call.
                   - @meeting.organisers.each do |organiser|
                     %p
                       = organiser.full_name
