Moves Agenda section of monthlies emails into a partial

--- a/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
+++ b/app/views/meeting_invitation_mailer/approve_from_waitlist.html.haml
@@ -16,6 +16,8 @@
                 %p.lead
                   A spot opened up for the next codebar Monthly!
 
+        = render partial: 'agenda'
+
         .content
           %table
             %tr
