--- a/app/views/meeting_invitation_mailer/attendance_reminder.html.haml
+++ b/app/views/meeting_invitation_mailer/attendance_reminder.html.haml
@@ -20,6 +20,8 @@
                 %p
                   The talks will begin promptly at 7:00PM, food and drinks will be served from 6:30PM.
 
+        = render partial: 'agenda'
+
         .content
           %table
             %tr
