--- a/app/views/meeting_invitation_mailer/attending.html.haml
+++ b/app/views/meeting_invitation_mailer/attending.html.haml
@@ -16,6 +16,8 @@
                 %p.lead
                   You're confirmed for the next codebar Monthly!
 
+        = render partial: 'agenda'
+
         .content
           %table
             %tr
