--- a/app/views/meeting_invitation_mailer/attending.html.haml
+++ b/app/views/meeting_invitation_mailer/attending.html.haml
@@ -1,7 +1,7 @@
 = render partial: 'shared_mailers/header', locals: { title: 'codebar Monthly Attendance Confirmation' }
 %body{ bgcolor: '#FFFFFF' }
 
-  = render partial: 'shared_mailers/body_header', locals: { title: 'Attendance Confirmation' }
+  = render partial: 'shared_mailers/body_header', locals: { title: 'codebar Monthly Attendance Confirmation' }
 
   %table{ class: 'body-wrap'}
     %tr
@@ -18,15 +18,17 @@
 
         = render partial: 'agenda'
 
+        = render partial: 'cancel_attendance'
+
         .content
           %table
             %tr
               %td
                 %h4 Details
             %tr
-              %td.small{ width: "30%", style: "vertical-align: top; padding-right: 10px;" }
+              %td.small{ width: '30%', style: 'vertical-align: top; padding-right: 10px;' }
                 = image_tag(@meeting.venue.avatar, alt: @meeting.venue.name)
-              %td.small{ style: "vertical-align: top;" }
+              %td.small{ style: 'vertical-align: top;' }
                 %p #{humanize_date(@meeting.date_and_time, with_time: true)}
                 %p
                   #{@meeting.venue.name}
