--- a/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
+++ b/app/views/workshop_invitation_mailer/notify_waiting_list.html.haml
@@ -27,22 +27,7 @@
 
         .content
           %table
-            %tr
-              %td
-                %h4 Venue
-            %tr
-              %td{ width: '70%', style: 'vertical-align: top; padding-right:20px;' }
-                %p
-                  %strong #{@workshop.host.name}
-                  %br
-                  #{@host_address.to_html}
-                - if @host_address.directions
-                  %p
-                    %strong Directions:
-                    %br
-                    #{@host_address.directions}
-              %td{ width: '30%', style: 'vertical-align: top;' }
-                = image_tag(@workshop.host.avatar, alt: @workshop.host.name)
+            = render 'shared_mailers/venue'
             %tr
               %td
                 %p
