Update links to slack invitation page

--- a/app/views/errors/error.html.haml
+++ b/app/views/errors/error.html.haml
@@ -58,4 +58,4 @@
         %h1 Something went wrong
         %h2 If the problem persists please get in touch with us on Slack.
         %h3
-          In the meantime why don't you #{link_to 'join our community on Slack', 'https://codebar-slack.herokuapp.com/', target: '_blank'}?
+          In the meantime why don't you #{link_to 'join our community on Slack', 'https://slack.codebar.io', target: '_blank'}?
