--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -58,4 +58,4 @@
         %h1 Page not found
         %h2 If you entered a web address please check it was correct.
         %h3
-          In the meantime why don't you #{link_to 'join our community on Slack', 'https://codebar-slack.herokuapp.com/', target: '_blank'}?
+          In the meantime why don't you #{link_to 'join our community on Slack', 'https://slack.codebar.io', target: '_blank'}?
