--- a/app/views/shared/_social_media.html.haml
+++ b/app/views/shared/_social_media.html.haml
@@ -1,6 +1,6 @@
 %ul.inline-list.right.social-media
   %li.slack
-    = link_to 'https://codebar-slack.herokuapp.com' do
+    = link_to 'https://slack.codebar.io' do
       %span.fa-stack.fa-lg{"aria-hidden" => "true"}
         %i.fa.fa-square.fa-stack-2x
         %i.fa.fa-slack.fa-stack-1x.fa-inverse
