--- a/app/views/workshop_invitation_mailer/invite_coach.html.haml
+++ b/app/views/workshop_invitation_mailer/invite_coach.html.haml
@@ -24,7 +24,7 @@
 
                 %p Please note: We do not accept any RSVPs over email.
 
-                %p.callout #{link_to 'Join us on Slack', 'https://codebar-slack.herokuapp.com'} to offer help and guidance outside the workshops.
+                %p.callout #{link_to 'Join us on Slack', 'https://slack.codebar.io'} to offer help and guidance outside the workshops.
 
         .content
           %table{ bgcolor: '#FFFFFF' }
