--- a/app/views/workshop_invitation_mailer/invite_student.html.haml
+++ b/app/views/workshop_invitation_mailer/invite_student.html.haml
@@ -19,7 +19,7 @@
                 %p You will also get the opportunity to meet other people interested in coding and collaborate with them.
                 %p Please note: We do not accept any RSVPs over email.
 
-                %p.callout If you are working through the tutorials outside our workshop, or need any other help or advice #{ link_to 'join the codebar Slack', 'https://codebar-slack.herokuapp.com'}.
+                %p.callout If you are working through the tutorials outside our workshop, or need any other help or advice #{ link_to 'join the codebar Slack', 'https://slack.codebar.io'}.
 
         .content
           %table{ bgcolor: '#FFFFFF' }
