(chore) update job payment fee
Extract text to locale and other minor text tweaks

--- a/app/views/admin/jobs/show.html.haml
+++ b/app/views/admin/jobs/show.html.haml
@@ -20,7 +20,7 @@
             %label{ for: 'reliable_source' } It was posted by someone you know or a reliable source
           %li
             %input#payment{ type: 'checkbox' }
-            %label{ for: 'payment' } Payment confirmation was posted in the London organisers Slack channel
+            %label{ for: 'payment' } Payment confirmation was posted in Slack
           %li
             %input#to-the-point{ type: 'checkbox' }
             %label{ for: 'to-the-point' } The post is short and to the point
