--- a/app/views/member/jobs/new.html.haml
+++ b/app/views/member/jobs/new.html.haml
@@ -1,27 +1,27 @@
 .stripe.reverse
   .row
     .large-12.columns
-      %h2 List a job
+      %h2=t('member.jobs.new.title')
       %p
-        Before posting, please make sure that:
+        =t('member.jobs.new.rules_intro')
         %ul.no-bullet
           %li
             %input#work-details{type: 'checkbox'}
-            %label{for: 'work-details'} Your post details the work that will have to be undertaken
+            %label{for: 'work-details'}= t('member.jobs.new.details')
           %li
             %input#roles{type: 'checkbox'}
-            %label{for: 'roles'} It's suitable for people looking for Internships and Junior roles that will enable them to build up their career
+            %label{for: 'roles'}= t('member.jobs.new.suitability')
           %li
             %input#pay{type: 'checkbox'}
-            %label{for: 'pay'} The job pays an appropriate salary
+            %label{for: 'pay'}= t('member.jobs.new.salary')
           %li
             %input#short{type: 'checkbox'}
-            %label{for: 'short'} It's short and to the point
+            %label{for: 'short'}= t('member.jobs.new.short')
       %p
-        A minimum payment of <b>£25</b> would be appreciated to list a job (all donations go towards sustaining codebar and running our events).
-      =link_to "Make a payment", "https://codebar.io/donations/new", class: 'button'
+        = t('member.jobs.new.payment')
+      =link_to t('jobs.new.pay'), new_donation_path, class: 'button'
       %br
-      %small *Submitted jobs will be visible once they've been reviewed and approved by an organiser.
+      %small= t('jobs.new.approval_info')
 
 .stripe.reverse
   .row
