(chore) fix wrong job locale mapping

--- a/app/views/member/jobs/new.html.haml
+++ b/app/views/member/jobs/new.html.haml
@@ -21,7 +21,7 @@
         = t('member.jobs.new.payment')
       =link_to t('jobs.new.pay'), new_donation_path, class: 'button'
       %br
-      %small= t('jobs.new.approval_info')
+      %small= t('member.jobs.new.approval_info')
 
 .stripe.reverse
   .row
