--- a/app/views/admin/meetings/_invitation_management.html.haml
+++ b/app/views/admin/meetings/_invitation_management.html.haml
@@ -21,7 +21,7 @@
       %br
 
   .row
-    .medium-12.columns#attendances
+    .medium-12.columns.attendances
       %h4 Participants
       - @invitations.each do |invitation|
         .attendee.medium-5.columns
