--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -1,5 +1,5 @@
 .row
-  %table#attendances.large-12.columns
+  %table.attendances.large-12.columns
     %tbody
       - invitations.each do |invitation|
         %tr.row.attendee
