(feature) extend Job to include `JobPosting` schema fields
- Render salary on job listing page and …
- Change approval date to publication_date

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -77,7 +77,6 @@ nav a.menu {
 .no-js .sign-up-wizard .collapsed { display: block; }
 
 
-
 .workshop.title {
   color: grey;
   font-style: italic;
@@ -169,4 +168,8 @@ u {
 
 .admin_margin {
   margin-top: 15px;
+}
+
+form .hint {
+  color: gray;
 }
