--- a/app/views/member/jobs/_job_preview.html.haml
+++ b/app/views/member/jobs/_job_preview.html.haml
@@ -2,11 +2,18 @@
   %h4= link_to job.title, member_job_preview_path(job)
   %dl
     %dt= t('job.company')
-    %dd= job.company
+    - if job.company_website.present?
+      %dd= link_to job.company, job.company_website
+    - else
+      %dd= job.company
     %br
     %dt= t('job.published_on')
     %dd= l(job.created_at, format: :date)
     %dt= t('job.expires_on')
     %dd= l(job.expiry_date, format: :date)
-    %dt= t('job.location')
-    %dd= job.location
+    %dt= t('job.location.title')
+    %dd
+      - if job.remote
+        =t('job.location.remote')
+      - else
+        =job.location
