--- a/app/views/member/jobs/index.html.haml
+++ b/app/views/member/jobs/index.html.haml
@@ -2,29 +2,23 @@
   .row
     .large-12.columns
       %h1=t('member.jobs.title')
-      %p.lead
-        %small #{link_to('Click here', new_member_job_path)} if you would like to post a new job.
 
   - if @jobs.any?
     .row
-      .large-12.columns
-        %h4 Posted (#{@jobs.count})
-        %ul.jobs
+      %table.large-12.columns
+        %thead
+          %tr
+            %th Job title
+            %th Company
+            %th Location
+            %th Published on
+            %th Expires on
+            %th Status
+            %th
+        %tbody
           - @jobs.each do |job|
-            = render partial: 'jobs/job', locals: { job: job }
+            = render partial: 'member/jobs/job', locals: { job: job }
 
-  - if @pending.any?
-    .row
-      .large-12.columns
-        %h4 Pending (#{@pending.count})
-        %ul.jobs
-          - @pending.each do |job|
-            = render partial: 'job_preview', locals: { job: job }
-
-  - if @drafts.any?
-    .row
-      .large-12.columns
-        %h4 Drafts (#{@drafts.count})
-        %ul.jobs
-          - @drafts.each do |job|
-            = render partial: 'job_preview', locals: { job: job }
+  .row
+    .large-12.columns
+      =link_to('New job', new_member_job_path, class: 'button medium ')
