--- a/app/views/member/jobs/preview.html.haml
+++ b/app/views/member/jobs/preview.html.haml
@@ -1,17 +1,24 @@
-.alert-box.secondary
-  .row
-    .large-12.columns
-      This is a preview. <b>Submit</b> to verify your post or <b>Edit</b> to amend.
+.job
+  .stripe
+    .row
+      .large-12.columns
+        %br
+        %ul.breadcrumbs
+          %li= link_to "My jobs", member_jobs_path
+          %li.current= link_to @job.title, '#'
+    .row
+      .large-12.columns
+        .panel
+          = t("job.messages.#{@job.status.to_s}").html_safe
 
+          - if @job.approved?
+            =t('job.messages.public_page', link: link_to('public page', job_path(@job))).html_safe
+  = render partial: 'jobs/show', locals: { admin: false }
 
-= render partial: 'jobs/show', locals: { admin: false }
-
-%br
-.stripe
-  .row
-    .large-12.columns.text-right
-      = link_to "Edit", edit_member_job_path(@job), class: 'button round'
-      - unless @job.submitted?
-        = link_to "Submit", member_job_submit_path(@job), class: 'button round default', method: :post
-      - else
-        = link_to "My jobs", member_jobs_path, class: 'button round default'
+  .stripe
+    .row
+      .large-12.columns
+        - if @job.status.eql?(:draft) || @job.status.eql?(:pending)
+          = link_to "Edit", edit_member_job_path(@job), class: 'button round'
+        - unless @job.submitted?
+          = link_to "Submit", member_job_submit_path(@job), class: 'button round default', method: :post
