--- a/app/assets/stylesheets/partials/_jobs.scss
+++ b/app/assets/stylesheets/partials/_jobs.scss
@@ -1,9 +1,3 @@
-.alert-box {
-  label {
-    color: $white;
-  }
-}
-
 ul.jobs {
   margin: 0;
   padding: 0;
@@ -27,5 +21,25 @@ ul.jobs {
         width: 20%;
       }
     }
+  }
+}
+
+.job {
+  .stripe:not(.reverse):first-child {
+    padding: 40px 0px 20px;
+  }
+
+  .stripe:not(.reverse):nth-child(even) {
+    background-color: #f5f6f7;
+    padding: 20px 0 40px;
+  }
+
+  .stripe.reverse:nth-child(even) {
+    padding: 20px 0;
+  }
+
+  .stripe.reverse:nth-child(odd) {
+    background-color: #f5f6f7;
+    padding: 40px 0;
   }
 }
