--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 @import 'partials/colors';
+@import 'partials/links';
 @import 'partials/layout';
 @import 'partials/hero';
 @import 'partials/events';
