--- a/app/assets/stylesheets/partials/_colors.sass
+++ b/app/assets/stylesheets/partials/_colors.sass
@@ -1,3 +1,7 @@
+$codebar-green: #19f3be
+$codebar-pink: #ff036a
+$codebar-blue: #4bafff
+
 $main-stroke: #f2f2f4
 $navigation-gray: #fdfdfd
 $navigation-gray-separators: #dddedd
@@ -38,5 +42,6 @@ $workshop-titles-dark-grey: #2d193c
 $workshop-day-gray: #555555
 $sub-workshop-desc-grey: #6e6b6c
 $dark-color: #0e001b
-$secondary-color: #E97CA1
+
 $primary-color: #596677
+$secondary-color: $codebar-blue
