--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,6 @@
 @import 'partials/colors';
 @import 'partials/links';
+@import 'partials/margins';
 @import 'partials/layout';
 @import 'partials/hero';
 @import 'partials/events';
