--- a/app/views/jobs/_job.html.haml
+++ b/app/views/jobs/_job.html.haml
@@ -1,24 +1,17 @@
 %li.job
-  %h4= link_to job.title, job_path(job)
+  %h3.mb0= link_to job.title, job_path(job)
+  %p.lead.mb0="#{job.company}, #{job.location}"
   %dl
-    %dt= t('job.company')
-    %dd
-      -if job.company_website.present?
-        =link_to(job.company, job.company_website)
-      - else
-        = job.company
-    %br
     - if job.salary.present?
       %dt= t('job.salary')
-      %dd= number_to_currency(job.salary)
-      %br
+      %dd.double= number_to_currency(job.salary)
     %dt= t('job.published_on')
     - if job.published_on.present?
-      %dd= l(job.published_on, format: :date)
+      %dd= l(job.published_on, format: :full_date)
     - else
       %dd= "-"
     %dt= t('job.expires_on')
-    %dd= l(job.expiry_date, format: :date)
+    %dd= l(job.expiry_date, format: :full_date)
     %dt= t('job.location.title')
     %dd
       - if job.remote
