--- a/app/views/member/jobs/index.html.haml
+++ b/app/views/member/jobs/index.html.haml
@@ -1,24 +1,32 @@
-.stripe.reverse
-  .row
-    .large-12.columns
-      %h1=t('member.jobs.title')
-
-  - if @jobs.any?
+.job
+  .stripe
     .row
-      %table.large-12.columns
-        %thead
-          %tr
-            %th Job title
-            %th Company
-            %th Location
-            %th Published on
-            %th Expires on
-            %th Status
-            %th
-        %tbody
-          - @jobs.each do |job|
-            = render partial: 'member/jobs/job', locals: { job: job }
+      .large-12.columns
+        %br
+        %ul.breadcrumbs
+          %li.current=link_to  t('member.jobs.title'), "#"
 
-  .row
-    .large-12.columns
-      =link_to('New job', new_member_job_path, class: 'button medium ')
+    - if @jobs.any?
+      .row
+        %table.large-12.columns
+          %thead
+            %tr
+              %th Job title
+              %th Company
+              %th Location
+              %th Published on
+              %th Expires on
+              %th Status
+              %th
+          %tbody
+            - @jobs.each do |job|
+              = render partial: 'member/jobs/job', locals: { job: job }
+      .row
+        .medium-6.columns.text-left
+          = page_entries_info(@jobs, model: 'job')
+        .medium-6.columns.text-right
+          = will_paginate(@jobs)
+
+    .row.mt1
+      .large-12.columns
+        =link_to('New job', new_member_job_path, class: 'button medium ')
